@@ -253,6 +253,10 @@ PYCAIRO_MOD_INIT(_cairo)
   if (PyType_Ready(&PycairoRectangle_Type) < 0)
     return PYCAIRO_MOD_ERROR_VAL;
 
+  PycairoTextCluster_Type.tp_base = &PyTuple_Type;
+  if (PyType_Ready(&PycairoTextCluster_Type) < 0)
+    return PYCAIRO_MOD_ERROR_VAL;
+
 #ifdef CAIRO_HAS_SCRIPT_SURFACE
   if (PyType_Ready(&PycairoScriptDevice_Type) < 0)
     return PYCAIRO_MOD_ERROR_VAL;
@@ -388,6 +392,9 @@ PYCAIRO_MOD_INIT(_cairo)
 
   Py_INCREF(&PycairoRectangle_Type);
   PyModule_AddObject(m, "Rectangle", (PyObject *)&PycairoRectangle_Type);
+
+  Py_INCREF(&PycairoTextCluster_Type);
+  PyModule_AddObject(m, "TextCluster", (PyObject *)&PycairoTextCluster_Type);
 
 #ifdef CAIRO_HAS_SCRIPT_SURFACE
   Py_INCREF(&PycairoScriptDevice_Type);
