@@ -252,6 +252,7 @@ def main():
             'cairo/misc.c',
             'cairo/glyph.c',
             'cairo/rectangle.c',
+            'cairo/textcluster.c',
         ],
         include_dirs=pkg_config_parse('--cflags-only-I', 'cairo'),
         library_dirs=pkg_config_parse('--libs-only-L', 'cairo'),
